--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -1,3 +1,137 @@
-<ol class="breadcrumb">
-  <li class="breadcrumb-item active">Home</li>
-</ol>
+<div>
+	<ol class="breadcrumb">
+	  <li class="breadcrumb-item active">Home</li>
+	</ol>
+</div>
+<div>
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img_fjords.jpg">
+        <img src="/public/image/thoradio.jpg" alt="Trolltunga Norway" >
+      </a>
+      <a target="_blank" href="#">
+       Thơ Radio: Tháng sáu về liệu ai có tìm nhau?
+      </a>
+      <p>15-06-2017 01:30:00</p>
+      <div class="desc">
+        Tháng sáu này, liệu ai có tìm nhau Trong miền nhớ hay trong màu kí ức Để thấy lại mình của một thời rạo rực… Yêu chân </div>
+    </div>
+  </div>
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img_forest.jpg">
+        <img src="/public/image/tho3.jpg" alt="Forest" >
+      </a>
+       <a target="_blank" href="#">
+       Thơ Radio: Tháng sáu về liệu ai có tìm nhau?
+      </a>
+      <p>15-06-2017 01:30:00</p>
+      <div class="desc">
+        Tháng sáu này, liệu ai có tìm nhau Trong miền nhớ hay trong màu kí ức Để thấy lại mình của một thời rạo rực… Yêu chân </div>
+    </div>
+  </div>
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img_lights.jpg">
+        <img src="/public/image/tho2.jpg" alt="Northern Lights">
+      </a>
+      <a target="_blank" href="#">
+       Thơ Radio: Tháng sáu về liệu ai có tìm nhau?
+      </a>
+      <p>15-06-2017 01:30:00</p>
+      <div class="desc">
+        Tháng sáu này, liệu ai có tìm nhau Trong miền nhớ hay trong màu kí ức Để thấy lại mình của một thời rạo rực… Yêu chân </div>
+    </div>
+  </div>
+</div>
+<div>
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img_fjords.jpg">
+        <img src="/public/image/tho4.jpg" alt="Trolltunga Norway" >
+      </a>
+      <a target="_blank" href="#">
+       Thơ Radio: Tháng sáu về liệu ai có tìm nhau?
+      </a>
+      <p>15-06-2017 01:30:00</p>
+      <div class="desc">
+        Tháng sáu này, liệu ai có tìm nhau Trong miền nhớ hay trong màu kí ức Để thấy lại mình của một thời rạo rực… Yêu chân </div>
+    </div>
+  </div>
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img_forest.jpg">
+        <img src="/public/image/tho6.jpg" alt="Forest">
+      </a>
+       <a target="_blank" href="#">
+       Thơ Radio: Tháng sáu về liệu ai có tìm nhau?
+      </a>
+      <p>15-06-2017 01:30:00</p>
+      <div class="desc">
+        Tháng sáu này, liệu ai có tìm nhau Trong miền nhớ hay trong màu kí ức Để thấy lại mình của một thời rạo rực… Yêu chân </div>
+    </div>
+  </div>
+
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img_lights.jpg">
+        <img src="/public/image/tho5.jpg" alt="Northern Lights" >
+      </a>
+      <a target="_blank" href="#">
+       Cách tìm nghe những bài hát, bản nhạc được sử dụng trong các số Blog Radio
+      </a>
+      <p class="date">15-06-2017 01:30:00</p>
+      <div class="desc">
+        Bạn có thể tìm nghe những bài hát, bản nhạc hay nhất được sử dụng trong các chương trình phát thanh của Blog Radio  </div>
+    </div>
+  </div>
+</div>
+<div>
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img_fjords.jpg">
+        <img src="/public/image/tho7.png" alt="Trolltunga Norway" >
+      </a>
+      <a target="_blank" href="#">
+       Thơ Radio: Tháng sáu về liệu ai có tìm nhau?
+      </a>
+      <p>15-06-2017 01:30:00</p>
+      <div class="desc">
+        Tháng sáu này, liệu ai có tìm nhau Trong miền nhớ hay trong màu kí ức Để thấy lại mình của một thời rạo rực… Yêu chân </div>
+    </div>
+  </div>
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img_forest.jpg">
+        <img src="/public/image/yeu-va-thich.gif" alt="Forest" >
+      </a>
+       <a target="_blank" href="#">
+       Thơ Radio: Tháng sáu về liệu ai có tìm nhau?
+      </a>
+      <p>15-06-2017 01:30:00</p>
+      <div class="desc">
+        Tháng sáu này, liệu ai có tìm nhau Trong miền nhớ hay trong màu kí ức Để thấy lại mình của một thời rạo rực… Yêu chân </div>
+    </div>
+  </div>
+
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img_lights.jpg">
+        <img src="/public/image/img1.jpg" alt="Northern Lights" >
+      </a>
+      <a target="_blank" href="#">
+       Cách tìm nghe những bài hát, bản nhạc được sử dụng trong các số Blog Radio
+      </a>
+      <p class="date">15-06-2017 01:30:00</p>
+      <div class="desc">
+        Bạn có thể tìm nghe những bài hát, bản nhạc hay nhất được sử dụng trong các chương trình phát thanh của Blog Radio  </div>
+    </div>
+  </div>
+  <div class="clearfix"></div>
+  </div>
+<div class="banner">
+  <a target="_blank" href="">
+      <img src="/public/image/KhamPhaNuocMy.jpg" alt="Northern Lights" >
+  </a>
+</div>
+
