update abouts us

--- a/app/views/abouts/index.hbs
+++ b/app/views/abouts/index.hbs
@@ -12,9 +12,10 @@
   <table class="table">
     <thead>
       <tr>
-        <th>Stt</th>
-        <th>Mssv</th>
+        <th>STT</th>
+        <th>MSSV</th>
         <th>Họ Tên</th>
+        <th>Email</th>
       </tr>
     </thead>
     <tbody>
@@ -22,11 +23,13 @@
         <td>1</td>
         <td>1312432</td>
         <td>Phạm Hữu Phong</td>
+        <td>1312432@student.hcmus.edu.vn</td>
       </tr>
       <tr>
         <td>2</td>
         <td>1312479</td>
         <td>Lại Trọng Sang</td>
+        <td>1312479@student.hcmus.edu.vn</td>
       </tr>
     </tbody>
 
