--- a/app/views/layouts/application.hbs
+++ b/app/views/layouts/application.hbs
@@ -4,10 +4,6 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css">
-
-
-
-
 </head>
 
 <body>
@@ -30,7 +26,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="/users/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
+					<a href="/users/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
 				</li>
 				<li>
 					<a href="/users/login"><span class="glyphicon glyphicon-log-in"></span> Login</a>
