--- a/app/views/partials/header.hbs
+++ b/app/views/partials/header.hbs
@@ -4,18 +4,11 @@
 <div class="hRight">
 	<div class="hLogin">
 		<ul class="nav navbar-nav">
-			<li class=""><a href="/register">Đăng Ký</a></li>					
-			<li class="last"><a href="/login">Đăng Nhập</a></li>		
+			<li class=""><a href="/users/signup">Đăng Ký</a></li>					
+			<li class="last"><a href="/users/login">Đăng Nhập</a></li>		
 		</ul>			
 	</div>
 				
-	<form class="form-inline">
-     	<div class="form-group">
-          	<input type="text" class="form-control" placeholder="Nhập từ khóa cần tìm...">
-        </div>
-        <button type="submit" class="btn btn-primary">
-  			<span class="glyphicon glyphicon-search"></span>
-		</button>
- 	</form>
+	
  				
 <!--class hRight--></div>
