--- a/app/views/partials/header.hbs
+++ b/app/views/partials/header.hbs
@@ -5,7 +5,7 @@
 	<div class="hLogin">
 		<ul class="nav navbar-nav">
 			<li class=""><a href="/users/signup">Đăng Ký</a></li>					
-			<li class="last"><a href="/users/login">Đăng Nhập</a></li>		
+			<li class="last"><a href="/users/signin">Đăng Nhập</a></li>		
 		</ul>			
 	</div>
 				
