--- a/app/views/users/signin.hbs
+++ b/app/views/users/signin.hbs
@@ -6,7 +6,7 @@
 </div>
 <div class="container">
   <div class="">
-    <h2>Login</h2>
+    <h2>Đăng nhập</h2>
   </div>
   <form class="" action="" method="post">
     <div class="form-group">
