--- a/app/views/partials/footer.hbs
+++ b/app/views/partials/footer.hbs
@@ -9,10 +9,10 @@
 <div class="fRight">
 	<ul class="">
 		<li class=""><a href="/">TRANG CHỦ</a></li>
-		<li><a href="#">BÀI VIẾT</a></li>
-		<li><a href="#">GÓC ẢNH</a></li>
-		<li><a href="#">GỬI BÀI</a></li>
-		<li class="last"><a href="/abouts">ABOUT US</a></li>		
+			<li><a href="/blogs">BÀI VIẾT</a></li>
+			<li><a href="/albums">GÓC ẢNH</a></li>
+			<li><a href="/messages">TIN NHẮN</a></li>
+			<li class="last"><a href="/abouts">ABOUT US</a></li>			
 	</ul>	
 	<p>Copyright (c) 2017 Blog Tâm Trạng</p>
 <!--class fRight--></div>
