--- a/app/views/blogs/index.hbs
+++ b/app/views/blogs/index.hbs
@@ -1,6 +1,25 @@
 <div class="">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item active">Blogs</li>
-  </ol>
+	<ol class="breadcrumb">
+		<li class="breadcrumb-item"><a href="/">Home</a></li>
+		<li class="breadcrumb-item active">Bài Viết</li>
+	</ol>
+</div>
+<div class="container">
+	<h3>Đăng bài viết</h3>
+	<form method="post">
+		<div class="form-group">
+			<label>Title</label>
+			<input type="text" name="title" class="form-control" placeholder="Tiêu đề bài viết" required="true">
+		</div>
+		<div class="form-group">
+			<label>Content</label>
+			<textarea  class="form-control" type="text" name="content" placeholder="Nội dung bài viết" required="true"></textarea>
+		</div>
+		<div class="form-group">
+		<label>Picture</label>
+		</div>
+
+		<button type="submit" class="btn btn-success">Submit</button>
+		<button class="btn btn-default">Reset</button>
+	</form>
 </div>
