--- a/app/views/partials/menu.hbs
+++ b/app/views/partials/menu.hbs
@@ -13,7 +13,7 @@
 			<li class=""><a href="/">TRANG CHỦ</a></li>
 			<li><a href="/blogs">BÀI VIẾT</a></li>
 			<li><a href="/albums">GÓC ẢNH</a></li>
-			<li><a href="#">GỬI BÀI</a></li>
+			<li><a href="/messages">TIN NHẮN</a></li>
 			<li class="last"><a href="/abouts">ABOUT US</a></li>		
 		</ul>		
 	</div>			
