--- a/app/views/blogs/listBlogs.hbs
+++ b/app/views/blogs/listBlogs.hbs
@@ -6,7 +6,8 @@
 		<div class="row">
 			<div class="thumbnail">
 				<label>Title: {{this.title}}</label>
-				<a href="/blogs/{{this.id}}">Chi tiết bài viết</a></div>
+				<a href="/blogs/{{this.id}}">Chi tiết bài viết</a>
 			</div>
+		</div>
 	{{/each}}
 </div>
