--- a/app/views/messages/create.hbs
+++ b/app/views/messages/create.hbs
@@ -4,7 +4,8 @@
 </ol>
 <div class="container">
     <div class="">
-        <a href="/users/listfriend" class="btn btn-success">Danh sách bạn bè</a>
+    <a href="/users/listuser" class="btn btn-success">Danh sách người dùng</a>
+        <a href="/users/listfriend" class="btn btn-success">Danh sách theo dỗi</a>
         <a href="/messages/create" class="btn btn-success">Tạo tin nhắn</a>
         <a href="/messages/receive" class="btn btn-success">Xem tin nhắn đã nhận</a>
     </div>
