--- a/app/views/blogs/listBlogs.hbs
+++ b/app/views/blogs/listBlogs.hbs
@@ -5,7 +5,7 @@
 	{{#each blogs}}
 		<div class="row">
 			<div class="thumbnail">
-				<label>Title: {{this.title}}</label>
+				<label>Title: {{this.title}}</label></br>
 				<a href="/blogs/{{this.id}}">Chi tiết bài viết</a>
 			</div>
 		</div>
