--- a/app/views/layouts/main_user.hbs
+++ b/app/views/layouts/main_user.hbs
@@ -35,6 +35,7 @@
 	<script src="/public/js/jquery.min.js" charset="utf-8"></script>
     <script src="/public/js/bootstrap.js" charset="utf-8"></script>
     <script type="text/javascript" src="/public/js/follow_user.js"></script>
+    <script type="text/javascript" src="/public/js/comment_user.js"></script>
 </body>
 
 </html>
