--- a/app/views/messages/create.hbs
+++ b/app/views/messages/create.hbs
@@ -1,6 +1,7 @@
 <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item active">Messages</li>
+    <li class="breadcrumb-item"><a href="/messages">Messages</a></li>
+     <li class="breadcrumb-item active">create</li>
 </ol>
 <div class="container">
     <div class="">
