--- a/app/views/users/listfriend.hbs
+++ b/app/views/users/listfriend.hbs
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item active">List User</li>
+    <li class="breadcrumb-item active">Danh sách follow</li>
 </ol>
 
 <div class="container">
