--- a/app/views/users/listuser.hbs
+++ b/app/views/users/listuser.hbs
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item active">List Friend</li>
+    <li class="breadcrumb-item active">Danh sách user </li>
 </ol>
 
 <div class="container">
