--- a/app/views/blogs/show.hbs
+++ b/app/views/blogs/show.hbs
@@ -15,6 +15,13 @@
 		<img src="{{blogs.picture}}">
 	</div>
 	<div class="form-group">
-	<a href="/users/listblog/{{blogs.users}}">Xem thêm bài viết của người này</a>
+		<a href="/users/listblog/{{blogs.users}}">Xem thêm bài viết của người này</a>
+	</div>
+	<div class="form-group">
+		<textarea  rows="2" cols="100" type="text" name="comment" id="txt_cmt" placeholder="Comment"></textarea>
+		<button class="btn btn-success" id="btn_cmt" value="{{blogs.id}}">Comment</button>
+	</div>
+	<div class="form-group">
+		<a href="/comments/list/{{blogs.id}}">Xem comment của bài viết này</a>
 	</div>
 </div>
