--- a/app/views/albums/album2.hbs
+++ b/app/views/albums/album2.hbs
@@ -1,20 +1,18 @@
 <div class="">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item active">Albums</li>
+    <li class="breadcrumb-item"><a href="/albums">Albums</a></li>
+    <li class="breadcrumb-item active">Album2</li>
   </ol>
 </div>
+<h4>Tuyển tập ảnh tâm sự</h4>
 <div class="row">
 	{{#each images}}
 		<div class="col-sm-3 col-xs-4">
 			<div class="album1">
-				<a href="/albums/{{this.id}}"><img src="{{this.url}}" alt="{{this.name}}"></a>
-				<a href="/albums/{{this.id}}">
-		       		{{this.titles}}
-		      	</a>	      	
+				<a href="#"><img src="{{this.url}}" alt="">
+			</a>
 			</div>
 		</div>
 	{{/each}}
 </div>
-
-			
