--- a/app/views/partials/menu.hbs
+++ b/app/views/partials/menu.hbs
@@ -1,23 +1,20 @@
-<nav class="nav navbar-default ">
+<nav class="nav navbar-primary ">
 	<div class="leftgNav" >
-		<button type="button" class="navbar-toggle collapsed"
-		data-target="#main-nav" data-toggle="collapse" aria-expanded="false" name="button">
-		<span class="sr-only">Toggle navigation</span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
+		<button type="button" class="navbar-toggle collapsed" 
+			data-target="#main-nav" data-toggle="collapse" aria-expanded="false" name="button">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
 		</button>
 	</div>
 	<div class="collapse navbar-collapse" id="main-nav">
 		<ul class="nav navbar-nav">
 			<li class=""><a href="/">TRANG CHỦ</a></li>
-			<li>
-				<a href="/users/blogs">TRANG CÁ NHÂN</a>
-			</li>
 			<li><a href="/blogs">BÀI VIẾT</a></li>
 			<li><a href="/albums">GÓC ẢNH</a></li>
-			<li><a href="/messages">TIN NHẮN</a></li>
-			<li class="last"><a href="/abouts">ABOUT US</a></li>
-		</ul>
-	</div>
-</nav>
+			<li><a href="#">GỬI BÀI</a></li>
+			<li class="last"><a href="/contact">LIÊN HỆ</a></li>		
+		</ul>		
+	</div>			
+</nav>	
