--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -9,45 +9,56 @@ img {
     border: none;
     vertical-align: top;
 }
+body {
+
+}
 #layout {
     margin: 10px 100px 20px 100px;   
 }
 
 #header {
     padding: 10px 20px 20px 20px;
-    width: 100%;
+    
     
 }
 /*hLeft*/
 .hLeft {
     float: left;
     margin-bottom: 10px;
+    width: 40%;
 }
-.hLeft h1 {
-    margin-bottom: 10px;
+
+.hLeft a img{
+    width: 250px;
+    height: 100px;
 }
-.hLeft h1 a img{
-    width: 220px;
-    height: 70px;
+@media only screen and (max-width: 768px){
+    .hLeft a img{
+        width: 95%;
+        height: 95%;
+    }
 }
 /*hRight*/
 .hRight {
     float: right;
     margin-bottom: 20px;
-    
 }
 .hRight .hLogin {
     margin-bottom: 37px;
     text-align: right;
     float: right;
-     font-weight: bold;
+    font-weight: bold;
+}
+.hRight .hLogin ul li {
+    font-size: 16px;
 }
 
 /*global navigation*/
 #gNav {
     clear: both;
     margin: 0px 20px;
-   background-color: #F5720E; 
+    background-color: #F5720E; 
+
 }
 #gNav ul li{
     border-right: solid 1px #4D3F35;
@@ -62,7 +73,7 @@ img {
 }
 
  #gNav ul li a {
-    color: #FE9C2D;
+    color: #FFFFFF;
     font-weight: bold;
     text-decoration: none;
     font-size: 16px;
@@ -71,7 +82,7 @@ img {
 #gNav ul li a:hover {
      
     color: #FE9C2D;
-    background-color: #DFE3E2;
+    background-color: #FADDD1;
      
 }
 #gNav .leftgNav {
@@ -93,40 +104,33 @@ img {
     clear: both;
     border-top: 1px solid #a3a2a3;
     padding: 10px;
-    /*background-color: #F5720E; */
+    background-color: #F76D31; 
     margin-top: 20px;
     /*margin: 0px 20px;*/
+    text-align: center;
 }
-#footer div.fLeft {
-    float: left;
-    width: 440px;
-    color: #10100F;
-
-}
-#footer div.fRight {
-    float: right;
-    width: 530px;
-}
-#footer div.fRight ul {
+#footer div ul {
     margin-bottom: 10px;
-    text-align: right;
+    
 }
-#footer div.fRight ul li {
+#footer div ul li {
+    color: #FFFFFF;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 16px;
+}
+#footer div ul li{
     display: inline;
     border-right: solid 1px #333;
     padding: 0 5px;
 }
-#footer div.fRight ul li.last {
+#footer div ul li.last {
     border-right: none;
     padding-right: 0;
-}
-#footer div.fRight p {
-    text-align: right;
 }
 #footer {
     zoom: 1;
 }
-
 
 #footer:after {
     clear: both;
@@ -134,8 +138,7 @@ img {
     display: block;
     height: 0;
     line-height: 0;
-    visibility: hidden;
-    
+    visibility: hidden;    
 }
 
 #pageBody {
@@ -150,24 +153,34 @@ img {
     visibility: hidden;
 }
 
-#content div.mymap {
-    margin-left: 40px;
-    clear: both;
-}
-/*div.albums {
-    width: 82%;
-    border: 1px solid #333; 
-    margin-bottom: 10px;
-    margin-right: 10px;
+.albums{
+    padding: 0 6px;
     float: left;
+    width: 24.9999999%;
+    margin-bottom: 5px;
 }
-*/
-div.albums img {
+.albums img {
     width: 100%;
-    height: 400px;
+    height: 300px;
+    
+}
+@media only screen and (max-width: 768px){
+    .albums {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+.album1{
+   
+    margin-bottom: 35px;
+}
+.album1 img {
+    width: 100%;
+    height: 300px;
 
 }
-div.myaddress {
+.myaddress {
     clear: both;
     margin-left: 50px;
 }
@@ -179,12 +192,12 @@ div.myaddress {
     width: 33.333333%;
     margin-bottom: 5px;
 }
-div.gallery img {
+.gallery img {
     width: 100%;
-    height: 100%;
+    height: 200px;
 }
 
-div.desc {
+.desc {
     padding: 10px;
     
 }
