--- a/app/views/partials/footer.hbs
+++ b/app/views/partials/footer.hbs
@@ -1,18 +1,17 @@
 <div>
 	<ul class="">
 		<li class=""><a href="/">TRANG CHỦ</a></li>
+		<li>
+			<a href="/users/blogs">TRANG CÁ NHÂN</a>
+		</li>
 		<li><a href="/blogs">BÀI VIẾT</a></li>
 		<li><a href="/albums">GÓC ẢNH</a></li>
-		<li><a href="#">GỬI BÀI</a></li>
-		<li class="last"><a href="/contact">LIÊN HỆ</a></li>		
-	</ul>	
+		<li><a href="/messages">TIN NHẮN</a></li>
+		<li class="last"><a href="/abouts">ABOUT US</a></li>
+	</ul>
 </div>
 <p style="font-weight: bold; font-size: 24px;">Blog Tâm Trạng</p>
 <p>Copyright (c) 2017 Blog Tâm Trạng</p>
 <p>Địa chỉ:	227 Nguyễn Văn Cừ, phường 4, quận 5, TP.HCM<br />
 <strong>Liên hệ quảng cáo:</strong> <br/> Điện thoại: 012.3456789</p>
 <p>Email: <a href="mailto:support@blogtamsu.com">support@blogtamsu.com</a></p>
-	
-
-
-	
