--- a/app/views/partials/header.hbs
+++ b/app/views/partials/header.hbs
@@ -4,8 +4,8 @@
 <div class="hRight">
 	<div class="hLogin">
 		<ul class="nav navbar-nav">
-			<li class=""><a href="/register">Đăng Ký</a></li>					
-			<li class="last"><a href="/login">Đăng Nhập</a></li>		
+			<li class=""><a href="/users/signup ">Đăng Ký</a></li>					
+			<li class="last"><a href="/users/signin">Đăng Nhập</a></li>		
 		</ul>			
 	</div>
 				
