--- a/app/views/partials/menu.hbs
+++ b/app/views/partials/menu.hbs
@@ -9,12 +9,16 @@
 		</button>
 	</div>
 	<div class="collapse navbar-collapse" id="main-nav">
+			
 		<ul class="nav navbar-nav">
 			<li class=""><a href="/">TRANG CHỦ</a></li>
+			<li>
+				<a href="/users/blogs">TRANG CÁ NHÂN</a>
+			</li>
 			<li><a href="/blogs">BÀI VIẾT</a></li>
 			<li><a href="/albums">GÓC ẢNH</a></li>
-			<li><a href="#">GỬI BÀI</a></li>
-			<li class="last"><a href="/contact">LIÊN HỆ</a></li>		
-		</ul>		
+			<li><a href="/messages">TIN NHẮN</a></li>
+			<li class="last"><a href="/contact">LIÊN HỆ</a></li>	
+		</ul>
 	</div>			
 </nav>	
